# CppRust_FFI_Bridge

./: README.md
Bridge_Cpp_Rust/Cpp_Rust/cpp/: CMakeLists.txt
Bridge_Cpp_Rust/Cpp_Rust/cpp/include/: example.hpp
Bridge_Cpp_Rust/Cpp_Rust/cpp/src/: example.cpp  main.cpp
Bridge_Cpp_Rust/Cpp_Rust/rust/: Cargo.toml  build.rs
Bridge_Cpp_Rust/Cpp_Rust/rust/src/: lib.rs  test.rs
CppRust_FFI_Bridge/Cpp_Rust/cpp/: CMakeLists.txt
CppRust_FFI_Bridge/Cpp_Rust/cpp/src/: example.cpp
CppRust_FFI_Bridge/Cpp_Rust/rust/: Cargo.toml  build.rs
CppRust_FFI_Bridge/Cpp_Rust/rust/src/: lib.rs  main.rs
